--- a/framework-parent/framework-component/survey-configserver/src/main/resources/config/dev/application-dev.yml
+++ b/framework-parent/framework-component/survey-configserver/src/main/resources/config/dev/application-dev.yml
@@ -41,7 +41,7 @@ spring:
     config:   #  优先读取本地配置
       allow-override: true
       override-none: true
-      override-system-properties: false
+      override-system-properties: false    # 是否覆盖Java运行时参数
   data:
     mongodb:
       host: 114.116.6.53
