--- a/framework-parent/framework-component/survey-eureka/src/main/resources/bootstrap-dev.yml
+++ b/framework-parent/framework-component/survey-eureka/src/main/resources/bootstrap-dev.yml
@@ -23,3 +23,4 @@ eureka:
     register-with-eureka: false
     service-url:
       defaultZone: http://${spring.security.user.name}:${spring.security.user.password}@114.116.44.104:48020/eureka/
+    backup-registry-impl: com.lego.survey.eureka.config.BackupServerRegistry
