--- a/framework-parent/framework-component/survey-eureka/pom.xml
+++ b/framework-parent/framework-component/survey-eureka/pom.xml
@@ -14,6 +14,7 @@
 
     <properties>
         <java.version>1.8</java.version>
+        <discovery.plugin.version>4.2.5</discovery.plugin.version>
         <spring.cloud.version>Finchley.RELEASE</spring.cloud.version>
         <spring.boot.admin.version>2.0.1</spring.boot.admin.version>
     </properties>
@@ -77,11 +78,17 @@
         </dependency>
 
 
-        <!--<dependency>
-            <groupId>com.nepxion</groupId>
-            <artifactId>discovery-plugin-starter-eureka</artifactId>
-            <version>4.8.2</version>
-        </dependency>-->
+        <dependency>
+            <groupId>com.sun.jersey</groupId>
+            <artifactId>jersey-client</artifactId>
+            <version>1.19.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+
 
     </dependencies>
 
@@ -94,6 +101,9 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+
+
+
         </dependencies>
     </dependencyManagement>
 
