--- a/survey-parent/survey-auth-impl/src/main/resources/bootstrap-local.yml
+++ b/survey-parent/survey-auth-impl/src/main/resources/bootstrap-local.yml
@@ -2,8 +2,8 @@ spring:
   cloud:
     config:
       fail-fast: true
-      uri: http://114.116.44.104:48020
-      profile: dev
+      uri: http://localhost:48020
+      profile: local
       label: master
       username: admin
       password: admin123456
