--- a/framework-parent/framework-common/survey-feign/pom.xml
+++ b/framework-parent/framework-common/survey-feign/pom.xml
@@ -49,6 +49,22 @@
             <version>1.1.2-beta5</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.legao.word</groupId>
+            <artifactId>poi</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.projectlombok</groupId>
+                    <artifactId>lombok</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-log4j12</artifactId>
+
+                </exclusion>
+            </exclusions>
+        </dependency>
 
     </dependencies>
 
