--- a/survey-parent/survey-settlement-impl/pom.xml
+++ b/survey-parent/survey-settlement-impl/pom.xml
@@ -124,7 +124,10 @@
             <artifactId>guava</artifactId>
             <version>19.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-mongodb</artifactId>
+        </dependency>
 
     </dependencies>
 
