--- a/framework-parent/framework-component/survey-configserver/src/main/resources/bootstrap-dev.yml
+++ b/framework-parent/framework-component/survey-configserver/src/main/resources/bootstrap-dev.yml
@@ -27,8 +27,6 @@ spring:
   #  username: root
   #  password: mysql
   #  driver-class-name: com.mysql.jdbc.Driver
-
-
   security:
     user:
       name: admin
@@ -38,6 +36,13 @@ encrypt:
   key: PL8iU@vt&0tFWijuoi%zASgsLP1rKwks
 
 
+define:
+  eureka:
+    user:
+      name: admin
+      password: admin123
+
+
 
 
 eureka:
@@ -45,7 +50,7 @@ eureka:
     fetch-registry: true
     register-with-eureka: true
     serviceUrl:
-      defaultZone: http://${spring.security.user.name}:${spring.security.user.password}@114.116.44.104:48010/eureka/
+      defaultZone: http://${define.eureka.user.name}:${define.eureka.user.password}@114.116.44.104:48010/eureka/
   instance:
     prefer-ip-address: true
     instance-id: ${spring.cloud.client.ip-address}:${server.port}
