测点批量上传  && 查询工程、标段、工区树形结构

--- a/framework-parent/framework-component/survey-configserver/src/main/resources/config/sit/application-sit.yml
+++ b/framework-parent/framework-component/survey-configserver/src/main/resources/config/sit/application-sit.yml
@@ -84,8 +84,8 @@ spring:
             user.password: ${define.user.password}
   servlet:
     multipart:
-      max-file-size: 5
-      max-request-size: 10
+      max-file-size: 5MB
+      max-request-size: 10MB
 management:
   endpoints:
     web:
