--- a/framework-parent/framework-component/survey-zuul/src/main/resources/bootstrap.yml
+++ b/framework-parent/framework-component/survey-zuul/src/main/resources/bootstrap.yml
@@ -7,6 +7,10 @@ spring:
     name: survey-zuul
   profiles:
     active: dev
+  servlet:
+    multipart:
+      max-file-size: 5MB
+      max-request-size: 10MB
 
 session:
   domain: survey-zuul
