--- a/survey-parent/survey-settlement-impl/pom.xml
+++ b/survey-parent/survey-settlement-impl/pom.xml
@@ -129,6 +129,12 @@
             <artifactId>spring-boot-starter-data-mongodb</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.lego.survey</groupId>
+            <artifactId>lib-excel</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
     </dependencies>
 
 
