--- a/framework-parent/framework-component/survey-eureka/src/main/resources/bootstrap-local.yml
+++ b/framework-parent/framework-component/survey-eureka/src/main/resources/bootstrap-local.yml
@@ -20,9 +20,9 @@ eureka:
     use-read-only-response-cache: false
 
   client:
-    fetch-registry: false
+    fetch-registry: true
     register-with-eureka: false
     service-url:
-      defaultZone: http://${spring.security.user.name}:${spring.security.user.password}@114.116.44.104:48020/eureka/
+      defaultZone: http://${spring.security.user.name}:${spring.security.user.password}@localhost:48010/eureka/
     backup-registry-impl: com.lego.survey.eureka.config.BackupServerRegistry
     filter-only-up-instances: true
