--- a/survey-parent/survey-file-impl/src/main/resources/bootstrap-dev.yml
+++ b/survey-parent/survey-file-impl/src/main/resources/bootstrap-dev.yml
@@ -19,8 +19,8 @@ file:
     url: http://192.168.105.10:18080/
 
 fpfile:
-  path: /opt/work/file
-  url:  http://114.116.6.53:8080/fp-api/file/file/v1/fpfile/download
+  path: D:\业务文档\测量\file
+  url:  http://localhost:50010/survey/api-file/file/fpfile/download
 ceph:
   host: http://192.168.105.10:7480/
   accessKey: 7BFAN4EX4ZCAT86V4Z65
