--- a/framework-parent/framework-component/survey-configserver/pom.xml
+++ b/framework-parent/framework-component/survey-configserver/pom.xml
@@ -71,7 +71,7 @@
         </dependency>
 
         <dependency>
-            <groupId>com.lego.survey</groupId>
+            <groupId>com.lego.log</groupId>
             <version>0.0.1-SNAPSHOT</version>
             <artifactId>lib-log</artifactId>
         </dependency>
