--- a/survey-parent/survey-file-impl/pom.xml
+++ b/survey-parent/survey-file-impl/pom.xml
@@ -85,19 +85,19 @@
         </dependency>
 
         <dependency>
-            <groupId>com.lego.survey</groupId>
+            <groupId>com.lego.swagger</groupId>
             <artifactId>lib-swagger</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
         <dependency>
-            <groupId>com.lego.survey</groupId>
+            <groupId>com.lego.common</groupId>
             <artifactId>lib-common</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
         <dependency>
-            <groupId>com.lego.survey</groupId>
+            <groupId>com.lego.log</groupId>
             <version>0.0.1-SNAPSHOT</version>
             <artifactId>lib-log</artifactId>
         </dependency>
