--- a/framework-parent/framework-common/survey-base/pom.xml
+++ b/framework-parent/framework-common/survey-base/pom.xml
@@ -14,7 +14,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.lego.survey</groupId>
+            <groupId>com.lego.common</groupId>
             <artifactId>lib-common</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
