--- a/framework-parent/framework-common/survey-feign/pom.xml
+++ b/framework-parent/framework-common/survey-feign/pom.xml
@@ -28,13 +28,13 @@
 
         <!-- lib -->
         <dependency>
-            <groupId>com.lego.survey</groupId>
+            <groupId>com.lego.common</groupId>
             <artifactId>lib-common</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
         <dependency>
-            <groupId>com.lego.survey</groupId>
+            <groupId>com.lego.swagger</groupId>
             <artifactId>lib-swagger</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
