--- a/framework-parent/framework-component/survey-gateway/pom.xml
+++ b/framework-parent/framework-component/survey-gateway/pom.xml
@@ -143,7 +143,7 @@
 
 
         <dependency>
-            <groupId>com.lego.survey</groupId>
+            <groupId>com.lego.log</groupId>
             <version>0.0.1-SNAPSHOT</version>
             <artifactId>lib-log</artifactId>
             <exclusions>
