--- a/framework-parent/framework-component/survey-monitor/pom.xml
+++ b/framework-parent/framework-component/survey-monitor/pom.xml
@@ -65,7 +65,7 @@
         </dependency>
 
         <dependency>
-            <groupId>com.lego.survey</groupId>
+            <groupId>com.lego.log</groupId>
             <version>0.0.1-SNAPSHOT</version>
             <artifactId>lib-log</artifactId>
         </dependency>
