--- a/survey-parent/survey-auth-impl/pom.xml
+++ b/survey-parent/survey-auth-impl/pom.xml
@@ -99,7 +99,7 @@
         </dependency>
 
         <dependency>
-            <groupId>com.lego.survey</groupId>
+            <groupId>com.lego.swagger</groupId>
             <artifactId>lib-swagger</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
@@ -112,7 +112,7 @@
 
 
         <dependency>
-            <groupId>com.lego.survey</groupId>
+            <groupId>com.lego.log</groupId>
             <version>0.0.1-SNAPSHOT</version>
             <artifactId>lib-log</artifactId>
         </dependency>
@@ -125,14 +125,14 @@
         </dependency>
 
         <dependency>
-            <groupId>com.lego.survey</groupId>
+            <groupId>com.lego.mybatis</groupId>
             <version>0.0.1-SNAPSHOT</version>
             <artifactId>lib-mybatis</artifactId>
         </dependency>
 
 
         <dependency>
-            <groupId>com.lego.survey</groupId>
+            <groupId>com.lego.common</groupId>
             <version>0.0.1-SNAPSHOT</version>
             <artifactId>lib-common</artifactId>
         </dependency>
