--- a/survey-parent/survey-report-impl/pom.xml
+++ b/survey-parent/survey-report-impl/pom.xml
@@ -100,7 +100,7 @@
         </dependency>
 
         <dependency>
-            <groupId>com.lego.survey</groupId>
+            <groupId>com.lego.mybatis</groupId>
             <artifactId>lib-mybatis</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
@@ -112,7 +112,7 @@
         </dependency>
 
         <dependency>
-            <groupId>com.lego.survey</groupId>
+            <groupId>com.lego.excel</groupId>
             <artifactId>lib-excel</artifactId>
             <version>0.0.1-SNAPSHOT</version>
             <scope>compile</scope>
@@ -135,7 +135,7 @@
 
 
         <dependency>
-            <groupId>com.lego.survey</groupId>
+            <groupId>com.lego.log</groupId>
             <version>0.0.1-SNAPSHOT</version>
             <artifactId>lib-log</artifactId>
         </dependency>
