--- a/survey-parent/survey-user-impl/pom.xml
+++ b/survey-parent/survey-user-impl/pom.xml
@@ -141,7 +141,7 @@
 
 
         <dependency>
-            <groupId>com.lego.survey</groupId>
+            <groupId>com.lego.log</groupId>
             <version>0.0.1-SNAPSHOT</version>
             <artifactId>lib-log</artifactId>
         </dependency>
