--- a/survey-parent/survey-file-impl/src/main/resources/fdfs_client-pro.conf
+++ b/survey-parent/survey-file-impl/src/main/resources/fdfs_client-pro.conf
@@ -9,5 +9,5 @@ charset=UTF-8
 #http.anti_steal_token=no
 #http.secret_key =legaoyun2018
 
-tracker_server=192.168.1.119:22122
-tracker_server=192.168.1.150:22122
+tracker_server=114.115.233.31:22122
+#tracker_server=192.168.1.150:22122
