--- a/survey-parent/survey-report-impl/src/main/resources/bootstrap.yml
+++ b/survey-parent/survey-report-impl/src/main/resources/bootstrap.yml
@@ -6,7 +6,7 @@ spring:
   application:
     name: report-service
   profiles:
-    active: dev
+    active: local
 
 application:
   description: 报表服务
