--- a/framework-parent/framework-component/survey-zuul/src/main/resources/bootstrap-local.yml
+++ b/framework-parent/framework-component/survey-zuul/src/main/resources/bootstrap-local.yml
@@ -2,7 +2,7 @@ spring:
   cloud:
     config:
       fail-fast: true
-      uri: http://localhost:48020
+      uri: http://192.168.101.103:48020
       profile: local
       label: master
       username: admin
