--- a/framework-parent/framework-component/survey-zuul/src/main/resources/bootstrap.yml
+++ b/framework-parent/framework-component/survey-zuul/src/main/resources/bootstrap.yml
@@ -6,7 +6,7 @@ spring:
   application:
     name: survey-zuul
   profiles:
-    active: dev
+    active: local
   servlet:
     multipart:
       max-file-size: 5MB
