修改用户信息

--- a/framework-parent/framework-component/survey-configserver/src/main/resources/config/dev/application-dev.yml
+++ b/framework-parent/framework-component/survey-configserver/src/main/resources/config/dev/application-dev.yml
@@ -122,6 +122,6 @@ hystrix:
 
 
 fpfile:
-  path: D:\业务文档\测量\file
-  url:  http://localhost:50010/survey/api-file/file/fpfile/download
+  path: /opt/work/file
+  url:  http://114.116.44.104:50010/survey/api-file/file/fpfile/download
 
